# vn-poc

./: Cargo.toml  README.md
report/: results1.txt  results_big_committee1.txt  results_big_committee2.txt  results_small_committee1.txt
src/: main.rs  shards.rs
