[package]
name = "vn_poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b = "0.99.0"
digest = "0.9.0"
histo = "1.0.0"
rand = "0.8.5"
tari_utilities = { git = "https://github.com/tari-project/tari_utilities.git", tag="v0.4.7" }
tari_crypto = { git = "https://github.com/tari-project/tari-crypto.git", tag = "v0.15.6" }
uint = "0.9.4"
